--- a/index.html
+++ b/index.html
@@ -71,16 +71,15 @@
 
         <div class="intro-section-text">
           <h2>Avvocato <br />Augusto Cassini</h2>
-          <p>
-            Mi sono laureato con 106/110 nel 1995 discutendo una tesi di diritto dell'esecuzione civile su
-            “L'espropriazione dei beni indivisi” con la prof. Annalisa Lorenzetto Peserico. <br />
-            Mi dedico al diritto civile ed in particolare al campo del diritto di famiglia, delle successioni, dei
-            diritti reali, delle obbligazioni e dei contratti, del recupero dei crediti e delle procedure esecutive.
-            <br />
-            Sono amministratore di sostegno dal 2013. <br />
-            Sono iscritto all'Albo Speciale della Cassazione e delle Giurisdizioni Superiori.<br />
-            Corrispondo in inglese.
-          </p>
+          Laureato con 106/110 nel 1995 in diritto dell'esecuzione civile su “L'espropriazione dei beni indivisi”, tesi
+          discussa con la prof.ssa Annalisa Lorenzetto Peserico.
+          Mi dedico al diritto civile ed in particolare: diritto di famiglia, delle successioni, dei diritti reali,
+          delle obbligazioni e dei contratti, del recupero dei crediti e delle procedure esecutive.
+          <br />
+          Amministratore di sostegno dal 2013.<br />
+          Iscritto all'Albo Speciale della Cassazione e delle Giurisdizioni Superiori.
+          <br />
+          Corrispondo in inglese.
           <button>
             <a href="mailto:segreteria@avvocatoaugustocassini.com?subject=Richiesta di consulenza">contattami</a>
           </button>
