--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="Avvocato Augusto Cassini Pordenone">
   <meta name="author" content="Augusto Cassini">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script defer data-domain="avvocatoaugustocassini.com" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
